add destination args and update fragment names

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/NearbyPlacesFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="io.radev.catchit.FirstFragment"
+        android:id="@+id/NearbyPlacesFragment"
+        android:name="io.radev.catchit.NearbyPlacesFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_first">
 
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            app:destination="@id/ConnectionsListFragment" />
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="io.radev.catchit.SecondFragment"
+        android:id="@+id/ConnectionsListFragment"
+        android:name="io.radev.catchit.ConnectionsListFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_second">
 
         <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+            android:id="@+id/action_ConnectionsListFragment_to_NearbyPlacesFragment"
+            app:destination="@id/NearbyPlacesFragment" />
+        <argument
+            android:name="ATOCODE"
+            app:argType="string" />
     </fragment>
 </navigation>
