--- a/app/src/main/res/layout/item_connection_item.xml
+++ b/app/src/main/res/layout/item_connection_item.xml
@@ -14,48 +14,60 @@
         android:layout_margin="30dp">
 
         <TextView
-            android:id="@+id/tv_name"
+            android:id="@+id/tv_departure_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Green Rd Green View - SE-bound" />
+            tools:text="15:20 (2020-05-28)" />
 
 
         <TextView
-            android:id="@+id/tv_description"
+            android:id="@+id/tv_line"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_name"
-            tools:text="Meanwood, Leeds" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_departure_date"
+            tools:text="7" />
+
+        <TextView
+            android:id="@+id/tv_direction"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="10dp"
+            android:textSize="16sp"
+            app:layout_constraintStart_toEndOf="@+id/tv_line"
+            app:layout_constraintTop_toBottomOf="@+id/tv_departure_date"
+            tools:text="Primley Park" />
 
 
         <TextView
-            android:id="@+id/tv_atcocode"
+            android:id="@+id/tv_operator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_description"
-            tools:text="45012345" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_direction"
+            tools:text="First Leeds" />
 
 
         <TextView
-            android:id="@+id/tv_distance"
+            android:id="@+id/tv_mode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="10dp"
             android:textSize="14sp"
-            app:layout_constraintStart_toEndOf="@+id/tv_atcocode"
-            app:layout_constraintTop_toBottomOf="@+id/tv_description"
-            tools:text="304" />
+            app:layout_constraintStart_toEndOf="@+id/tv_operator"
+            app:layout_constraintTop_toBottomOf="@+id/tv_direction"
+            tools:text="bus" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.google.android.material.card.MaterialCardView>
