--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ConnectionsListFragment">
+    tools:context=".fragment.ConnectionsListFragment">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/center_guideline"
