--- a/app/src/main/res/layout/item_connection_item.xml
+++ b/app/src/main/res/layout/item_connection_item.xml
@@ -68,6 +68,16 @@
             app:layout_constraintStart_toEndOf="@+id/tv_operator"
             app:layout_constraintTop_toBottomOf="@+id/tv_direction"
             tools:text="bus" />
+
+        <ImageView
+            android:id="@+id/fav_iv"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:clickable="true"
+            android:src="@drawable/baseline_favorite_border_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.google.android.material.card.MaterialCardView>
