--- a/app/src/main/res/layout/item_nearby_places.xml
+++ b/app/src/main/res/layout/item_nearby_places.xml
@@ -56,6 +56,16 @@
             app:layout_constraintStart_toEndOf="@+id/tv_atcocode"
             app:layout_constraintTop_toBottomOf="@+id/tv_description"
             tools:text="304" />
+
+        <ImageView
+            android:id="@+id/fav_iv"
+            android:clickable="true"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:src="@drawable/baseline_favorite_border_24"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.google.android.material.card.MaterialCardView>
