--- a/app/src/main/res/layout/item_connection_item.xml
+++ b/app/src/main/res/layout/item_connection_item.xml
@@ -14,37 +14,30 @@
         android:layout_margin="30dp">
 
         <TextView
-            android:id="@+id/tv_departure_date"
-            android:layout_width="wrap_content"
+            android:id="@+id/next_departure"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:inputType="textMultiLine"
+            app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/fav_iv"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="15:20 (2020-05-28)" />
+            tools:text="@string/departure_wait_time" />
+
+
 
 
         <TextView
-            android:id="@+id/tv_line"
+            android:id="@+id/expected_arrival"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:textSize="16sp"
-            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_departure_date"
-            tools:text="7" />
-
-        <TextView
-            android:id="@+id/tv_direction"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="10dp"
-            android:textSize="16sp"
-            app:layout_constraintStart_toEndOf="@+id/tv_line"
-            app:layout_constraintTop_toBottomOf="@+id/tv_departure_date"
-            tools:text="Primley Park" />
+            app:layout_constraintTop_toBottomOf="@+id/next_departure"
+            tools:text="@string/expected_arrival" />
 
 
         <TextView
@@ -54,20 +47,9 @@
             android:layout_marginTop="10dp"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_direction"
+            app:layout_constraintTop_toBottomOf="@+id/expected_arrival"
             tools:text="First Leeds" />
 
-
-        <TextView
-            android:id="@+id/tv_mode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="10dp"
-            android:textSize="14sp"
-            app:layout_constraintStart_toEndOf="@+id/tv_operator"
-            app:layout_constraintTop_toBottomOf="@+id/tv_direction"
-            tools:text="bus" />
 
         <ImageView
             android:id="@+id/fav_iv"
