--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -6,7 +6,7 @@
         android:icon="@drawable/baseline_favorite_border_24"
         android:title="@string/fav_title"/>
     <item
-        android:id="@+id/locationFragment"
+        android:id="@+id/departuresMap"
         android:enabled="true"
         android:icon="@drawable/baseline_search_24"
         android:title="@string/search_title"/>
